--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
         </div>
         <div class="container_func">
             <div class="inner_func">
-                <img src="/img/medical.png" alt="">
+                <img src="./img/medical.png" alt="">
                 <h3>Comprehend Medical</h3>
                 <p>Procesa información como dolencias médicas, medicamentos, dosis, pruebas, tratamientos y
                     procedimientos. Ejemplo: Centro de investigación contra el cáncer Fred Hutchinson (objetivo curar el
                     cáncer antes del 2025)</p>
             </div>
             <div class="inner_func">
-                <img class="img_bug_func" src="/img/visioncritical.png" alt="">
+                <img class="img_bug_func" src="./img/visioncritical.png" alt="">
                 <h3>Adaptado al cliente</h3>
                 <p>VisionCritical en su plataforma Sparq crea perfiles dinámicos de sus clientes analizando los
                     comentarios cualitativos de
@@ -107,7 +107,7 @@
                     de precisión.</p>
             </div>
             <div class="inner_func">
-                <img src="/img/videopeel.png" alt="">
+                <img src="./img/videopeel.png" alt="">
                 <h3>Otros servicios</h3>
                 <p>VideoPeel es una plataforma que crea perfiles dinámicos de los clientes analizando vídeos de éstos
                     hablando del
@@ -216,7 +216,7 @@
                                 “Passeig de la
                                 Universitat 3” como LOCATION y “2021” como DATE. Respuesta a una operación:</p>
                         </div>
-                        <img src="/img/entidades.png" alt="">
+                        <img src="./img/entidades.png" alt="">
                     </div>
                 </div>
             </div>
@@ -231,7 +231,7 @@
                             <p>Así, en el texto "El producto es fabuloso, quizás lo compre otra vez más adelante" la
                                 respuesta sería:</p>
                         </div>
-                        <img src="/img/analisis.png" alt="">
+                        <img src="./img/analisis.png" alt="">
                     </div>
                 </div>
             </div>
